[package]
name = "skindle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
directories = "4.0.1"
lettre = { version = "0.10.1", features = ["smtp-transport", "rustls-tls"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
toml = "0.5.10"
